Adding content to media info drawer, adding more content to graphql query

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -3,7 +3,8 @@ body {
 }
 
 .element-slight-hover:hover {
-  opacity: 0.98;
-  transform: scale(1.02);
+  opacity: 0.99;
+  transform: scale(0.98);
   border-radius: 10px;
+  overflow: hidden;
 }
